rusty-cdk-macros/tests/fails/message_retention_period_boundary_high.stderr
error: value should be at most 1209600
 --> tests/fails/message_retention_period_boundary_high.rs:4:44
  |
4 |     let period = message_retention_period!(1209601);
  |                                            ^^^^^^^
